--- a/src/app/components/services/services.component.scss
+++ b/src/app/components/services/services.component.scss
@@ -217,7 +217,7 @@
         border: 2px solid rgba(255, 255, 255, 0.2);
         border-radius: 10px;
         background: rgba(255, 255, 255, 0.1);
-        color: white;
+        color: var(--text);
         font-size: 1rem;
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
